samples/_failures_safe/1761410478_71fb59_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_44d00284.c: In function ‘main’:
./samples/SAFE/__tmp_44d00284.c:144:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  144 |     int token
      |     ^~~
./samples/SAFE/__tmp_44d00284.c:144:5: error: expected declaration or statement at end of input
